--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ class="navbar-logo">Berita<span>Semesta </span></a>
 <a href="#Home">Home</a>
 <a href="#Menu">Berulang Tahun</a>
 <a href="#about">Harapan</a>
-<a href="/Website/kontak/index.html">Tentang Penulis</a>
+<a href="https://xxmannaxx.github.io/tentang-aku/">Tentang Penulis</a>
 </div>
 	
 <div class="navbar-extra">
