--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ class="navbar-logo">Berita<span>Semesta </span></a>
 		<h1>Ulang Tahun</h1>
 		<h1><span>Fadilla Rizky</span></h1>
 		<p>sebuah website yang dibuat khusus untuk yang lagi berulang tahun</p>
-		<a href="#" class="cta">Beli Sekarang</a>
 	</main>
 </section>
 <!-- Hero section end -->
@@ -61,10 +60,10 @@ class="navbar-logo">Berita<span>Semesta </span></a>
 			<img src="img/Menu/Menu1.jpg" alt="fadilla" class="Menu-card-img">
 			<h3 class="Menu-card-title fw-light text-white m-0">
 				Fadilla Rizky</h3>
-			<p class="Menu-card-price">Cantik Sekali</p>
+			<p class="Menu-card-price"></p>
 		</div>
 	</div>
-	<p class="fw-light text-white m-0">Namanya Fadilla Rizky, sosok wanita cantik yang berkelahiran pada 7 januari 2003 yang berzodiakkan capricorn kerap membuat sang penulis website abal-abalan ini jatuh cinta berkali-kali saat melihat sosoknya saja wkwkwk.</p>
+	<p class="fw-light text-white m-0">Namanya Fadilla Rizky, sosok wanita cantik yang berkelahiran pada 7 januari 2003 yang berzodiakkan capricorn kerap membuat sang penulis website abal-abalan ini jatuh cinta berkali-kali saat melihat sosoknya saja. btw fotonya masih waktu SMA karena ga punya fotomu selain itu, kalo mau digantiin boleh sih kan tinggal kirim ke WA aku aja wkwkwkwk.</p>
 </section>
 
 <!-- menu section end -->
@@ -85,6 +84,7 @@ class="navbar-logo">Berita<span>Semesta </span></a>
 			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan ketiga yaitu tetap senyum karena mungkin masih banyak yang ingin melihat senyummu tetap mekar, bukan mekar pinjaman online ya.</p>
 			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan keempat yaitu tetap hidup, bukan berarti penulis menganggap yang sedang berulang tahun ingin segera mengakhiri hidup, tapi karena ada yang sangat bahagia dengan tetap hidupnya seseorang (tetap sehat maksudnya sih)</p>
 			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan kelima yaitu mudah-mudahan dilancarkan rezekinya dalam segala bentuk rezeki (maksudnya tidak hanya rezeki materi saja contoh rezeki kesehatan, memiliki teman baik, dan lain-lain).</p>
+			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">sekian dari penulis maaf kalo ada kekurangan dalam tampilan di website ini karena masih pemula hehehe.</p>
 		</div>
 
 	</div>
