--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ class="navbar-logo">Berita<span>Semesta </span></a>
 		</div>
 		<div class="content">
 			<h3></h3>
-			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan pertama yaitu semoga apa yang diinginkan semoga tercapai segera</p>
-			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan kedua yaitu tetap baik, baik kepada siapa saja, kepada orangtuamu, saudara kandungmu, sahabat, musuh atau mungkin orang yang mencintaimu wkwkwkwk :V</p>
+			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan pertama yaitu semoga apa yang diinginkan semoga tercapai segera.</p>
+			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan kedua yaitu tetap baik, baik kepada siapa saja, kepada orangtuamu, saudara kandungmu, sahabat, musuh atau mungkin orang yang mencintaimu wkwkwkwk :V.</p>
 			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan ketiga yaitu tetap senyum karena mungkin masih banyak yang ingin melihat senyummu tetap mekar, bukan mekar pinjaman online ya.</p>
-			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan keempat yaitu tetap hidup, bukan berarti penulis menganggap yang sedang berulang tahun ingin segera mengakhiri hidup, tapi karena ada yang sangat bahagia dengan tetap hidupnya seseorang (tetap sehat maksudnya sih)</p>
+			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan keempat yaitu tetap hidup, bukan berarti penulis menganggap yang sedang berulang tahun ingin segera mengakhiri hidup, tapi karena ada yang sangat bahagia dengan tetap hidupnya seseorang (tetap sehat maksudnya sih).</p>
 			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">Harapan kelima yaitu mudah-mudahan dilancarkan rezekinya dalam segala bentuk rezeki (maksudnya tidak hanya rezeki materi saja contoh rezeki kesehatan, memiliki teman baik, dan lain-lain).</p>
 			<p class="fw-light text-white m-0" style="text-align: justify; text-indent: 0.2in;">sekian dari penulis maaf kalo ada kekurangan dalam tampilan di website ini karena masih pemula hehehe.</p>
 		</div>
